# Networks

./: .gitignore  BGP_NOTES.md  BGP_NOTES.txt  Latency_Tests.md  MULTICAST_NOTES.md  MULTICAST_NOTES.txt  OSPF notes  OSPF_NOTES.md  README.md  RoCEv2_notes.md  Tunnels and VPNs.md  VRF Lite and MPLS Notes.md  VXLAN and EVPN.md  exchange_setup.md  exchange_setup.txt  tcp incast.md  test.py
AutoConn2/: Autocon 2 - Day1.md  Autocon 2 - Day2 - Afternoon.md  Autocon 2 - Day2 - Morning.md  Autocon 2 - Day3 - Closing.md  WS-A1 Notes.md  WS-B1 Notes.md  WS-C4 Notes.md  WS-D3 Notes.md
AutoConn2/mtu-tool/: pyproject.toml
AutoConn2/pictures/: PXL_20241120_202618798.jpg.lq  PXL_20241120_205513254.jpg.lq  PXL_20241120_205514842.jpg.lq  PXL_20241120_205955542.jpg.lq  PXL_20241120_212512208.jpg.lq  PXL_20241120_223801141.jpg.lq  PXL_20241120_224151320.jpg.lq  PXL_20241120_224401077.jpg.lq  PXL_20241120_224924648.jpg.lq  PXL_20241120_232546852.jpg.lq  PXL_20241120_234119359.jpg.lq  PXL_20241121_164447255.MP.jpg.lq  PXL_20241121_164520639.MP.jpg.lq  PXL_20241121_164714038.jpg.lq  PXL_20241121_181539014.jpg.lq  PXL_20241121_182203497.jpg.lq  PXL_20241121_182659512.jpg.lq  (+27 more)
Automation stuff/: gRPC_and_gNMI.md
Juniper/: Notes on JNCIS - Intermediate Routing-1.md  Notes on JNCIS - Intermediate Routing-2-OSPF.md  Notes on JNCIS - Intermediate Routing-2.md  Notes on JNCIS - Intermediate Routing-3--ISIS.md  Notes on JNCIS - Intermediate Routing-4--BGP.md  Notes on JNCIS - Intermediate Routing.md  Notes on JNCIS - Intermediate SP MPLS-1.md  Notes on JNCIS - Intermediate SP Switching-1.md
(+91 files in other folders)
